--- a/app/views/commits/index.html.erb
+++ b/app/views/commits/index.html.erb
@@ -1,37 +1,24 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Commits</h1>
+<div class="">
+<%= form_tag commits_url, method: :get, class: 'mb-4' do %>
+    <div class="mb-2">
+      <%= label_tag :owner, 'owner' %>
+      <%= text_field_tag :owner, params[:owner], placeholder: 'owner',
+                         class: 'px-3 py-2 rounded shadow' %>
+    </div>
+    <div class="mb-2">
+      <%= label_tag :repo, 'repo' %>
+      <%= text_field_tag :repo, params[:repo], placeholder: 'repo',
+                         class: 'px-3 py-2 rounded shadow' %>
+    </div>
+    <div class="mb-2">
+      <%= label_tag :start_date, 'author_email' %>
+      <%= text_field_tag :author_email, params[:author_email], placeholder: 'author_email',
+                         class: 'px-3 py-2 rounded shadow' %>
+    </div>
+  <%= submit_tag 'Search', class: 'bg-white border rounded py-2 px-3' %>
+<% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Commiter name</th>
-      <th>Commiter email</th>
-      <th>Message</th>
-      <th>Commit url</th>
-      <th>Profile url</th>
-      <th>Commit date</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @commits.each do |commit| %>
-      <tr>
-        <td><%= commit.commiter_name %></td>
-        <td><%= commit.commiter_email %></td>
-        <td><%= commit.message %></td>
-        <td><%= commit.commit_url %></td>
-        <td><%= commit.profile_url %></td>
-        <td><%= commit.commit_date %></td>
-        <td><%= link_to 'Show', commit %></td>
-        <td><%= link_to 'Edit', edit_commit_path(commit) %></td>
-        <td><%= link_to 'Destroy', commit, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Commit', new_commit_path %>
+<%= render @commits %>
