async destroy of single element added, jquery added

--- a/app/views/commits/index.html.erb
+++ b/app/views/commits/index.html.erb
@@ -20,5 +20,6 @@
     </div>
   <%= submit_tag 'Search', class: 'bg-white border rounded py-2 px-3' %>
 <% end %>
-
-<%= render @commits %>
+<div class="commits">
+  <%= render @commits %>
+</div>
