--- a/app/views/commits/_commit.html.erb
+++ b/app/views/commits/_commit.html.erb
@@ -21,7 +21,7 @@
         <td><%= commit.commit_date %></td>
         <td><%= link_to 'Show', commit %></td>
         <td><%= link_to 'Edit', edit_commit_path(commit) %></td>
-        <td><%= link_to 'Destroy', commit, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', commit, method: :delete, data: { confirm: 'Are you sure?', remote: true }, class: "delete" %></td>
       </tr>
   </tbody>
 </table>
