--- a/app/views/commits/_commit.html.erb
+++ b/app/views/commits/_commit.html.erb
@@ -1,28 +1,30 @@
-<div class="w-11/12 mx-auto">
-  <div class="bg-white shadow-md rounded my-6">
-    <table class="text-left w-full border-collapse">
-      <thead>
-        <tr>
-          <th class="w-1/5 py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-r -grey-light">Commiter name</th>
-          <th class="w-1/5 py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-r border-grey-light">Commiter email</th>
-          <th class="w-1/5 py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-r border-grey-light">Message</th>
-          <th class="w-1/5 py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-r border-grey-light">Commit date</th>
-          <th class="w-1/5 py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-grey-light" colspan="3">Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-          <tr class="hover:bg-grey-lighter">
-            <td class="w-1/7 py-4 px-6 border-b border-grey-light">
-            <%= link_to "#{commit.commiter_name}","#{commit.profile_url}", class: "hover:bg-transparent hover:text-black"%>
-            </td>
-            <td class="w-1/7 py-4 px-6 border-b border-grey-light"><%= commit.commiter_email %></td>
-            <td class="w-1/7 py-4 px-6 border-b border-grey-light"><%= commit.message %></td>
-            <td class="w-1/7 py-4 px-6 border-b border-grey-light"><%= commit.commit_date %></td>
-            <td><%= link_to 'Show on github', "#{commit.commit_url}", class: "w-1/7 py-4 px-6 hover:text-black hover:bg-transparent" %></td>
-            <td><%= link_to 'Destroy', commit, method: :delete, data: { confirm: 'Are you sure?', remote: true }, class: "w-1/7 delete hover:text-black hover:bg-transparent" %></td>
-            <td><%= check_box_tag "commit_ids[]", commit.id, false, class: 'selectable w-1/7 py-4 px-6 border-b border-grey-light', remote: true  %></td>
+<div id="commit_<%=commit.id%>">
+  <div class="w-11/12 mx-auto">
+    <div class="bg-white shadow-md rounded my-6">
+      <table class="text-left w-full border-collapse">
+        <thead>
+          <tr>
+            <th class="w-1/5 py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-r -grey-light">Commiter name</th>
+            <th class="w-1/5 py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-r border-grey-light">Commiter email</th>
+            <th class="w-1/5 py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-r border-grey-light">Message</th>
+            <th class="w-1/5 py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-r border-grey-light">Commit date</th>
+            <th class="w-1/5 py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-grey-light" colspan="3">Actions</th>
           </tr>
-      </tbody>
-    </table>
+        </thead>
+        <tbody>
+            <tr class="hover:bg-grey-lighter">
+              <td class="w-1/7 py-4 px-6 border-b border-grey-light">
+              <%= link_to "#{commit.commiter_name}","#{commit.profile_url}", class: "hover:bg-transparent hover:text-black"%>
+              </td>
+              <td class="w-1/7 py-4 px-6 border-b border-grey-light"><%= commit.commiter_email %></td>
+              <td class="w-1/7 py-4 px-6 border-b border-grey-light"><%= commit.message %></td>
+              <td class="w-1/7 py-4 px-6 border-b border-grey-light"><%= commit.commit_date %></td>
+              <td><%= link_to 'Show on github', "#{commit.commit_url}", class: "w-1/7 py-4 px-6 hover:text-black hover:bg-transparent" %></td>
+              <td><%= link_to 'Destroy', commit, method: :delete, data: { confirm: 'Are you sure?', remote: true }, class: "w-1/7 delete hover:text-black hover:bg-transparent" %></td>
+              <td><%= check_box_tag "commit_ids[]", commit.id, false, class: 'checkbox selectable w-1/7 py-4 px-6 border-b border-grey-light', remote: true  %></td>
+            </tr>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
