--- a/app/views/commits/destroy_multiple.js.erb
+++ b/app/views/commits/destroy_multiple.js.erb
@@ -1,3 +1,3 @@
-$('.destroy_multiple').bind('ajax:success', function() {
-  $('#commits').replaceWith('????/');
-});
+<% params[:commit_ids].each do |ids| %>
+  $("#commit_<%=ids%>").fadeOut()
+<%end%>
